--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 
     <section class="container mt-5" id="Hardskills">
         <h1 class="display-5 text-center">Hard <samp class="fw-bold">Skills</samp></h1>
-
-        <sect>
+        
+        <div>
             <div class="row gap-5 mx-0 mx-lg-3 my-5">
                 <div class="col-5 col-lg-2 text-center border border-black py-4">
                 <i class="fab fa-html5 fa-3x mb-3" title="HTML5"></i>
@@ -139,7 +139,7 @@
             </div>
             
 
-        </sect>
+        </div>
 
 
     </section>
