--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
                         </div>
 
                         <button type="submit" class="btn btn-light border border-2 border-dark p-3">Envoyer</button>
+                        <p id="message"></p>
                         <button type="button" class="btn btn-dark fs-3 mx-2"><i class="fab fa-discord"></i></button>
                         <button type="button" class="btn btn-light fs-3 mx-2"><i class="fab fa-linkedin"></i></button>
                         <button type="button" class="btn btn-light fs-3 mx-2"><i class="fab fa-github"></i></button>
