--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                             <textarea class="form-control border border-2 border-dark" placeholder="Message" rows="4"></textarea>
                         </div>
 
-                        <button type="submit" class="btn btn-light border border-2 border-dark p-3">Envoyer</button>
+                        <button type="submit" class="monBouton btn btn-light border border-2 border-dark p-3">Envoyer</button>
                         <p id="message"></p>
                         <button type="button" class="btn btn-dark fs-3 mx-2"><i class="fab fa-discord"></i></button>
                         <button type="button" class="btn btn-light fs-3 mx-2"><i class="fab fa-linkedin"></i></button>
