nav barre / ongler

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="/image/cv_logo.png">
     <title>Léa Bougarel</title>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -25,7 +26,7 @@
                 </a>
 
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" onclick="toggleResumeButton()">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" onclick="toggleCVButton()">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -51,8 +52,8 @@
                     </ul>
                 </div>
 
-                <a href="image/job.pdf" target="_blank" class="btn btn-dark d-none d-lg-block" id="resume-btn">
-                    Resume
+                <a href="image/job.pdf" target="_blank" class="btn btn-dark d-none d-lg-block" id="CV-btn">
+                    CV
                 </a>
 
 
