--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/image/cv_logo.png">
-    <title>Léa Bougarel</title>
+    <title>Lea Bougarel - Portfolio développeuse & compétences web</title>
+    <meta name="description" content="Portfolio de Lea Bougarel, étudiante en informatique à Clermont-Ferrand : projets web, compétences en HTML, CSS, Bootstrap, JavaScript et plus.">
+
+    <meta property="og:title" content="Lea Bougarel - Portfolio développeuse">
+    <meta property="og:description" content="Découvrez mes projets web et mes compétences en développement web.">
+    <meta property="og:image" content="https://lea772.github.io/cv-boostrap/image/girl_main.svg">
+    <meta property="og:url" content="https://lea772.github.io/cv-boostrap/">
+    <meta property="og:type" content="website">
+
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,7 +23,7 @@
 </head>
 
 <body>
-    <div class="vh-lg-100 pb-5">
+    <header class="vh-lg-100 pb-5">
         <!-- NAVBAR -->
         <nav class="navbar navbar-expand-lg bg-white shadow-sm py-2 fixed-top">
             <div class="container">
@@ -71,7 +79,7 @@
                     <p class="display-5">Etudiante en <span class="display-5 fw-bold creu">informatique</span></p>
                     <p class="display-5">A <span class="fw-bold">Clermont-Ferrand</span></p>
                     <p class="fw-light">
-                       Je suis actuellement étudiante en informatique à l'école Hexagone à Clermont-Ferrand. Tout au long de mon parcours, j'ai acquis de nombreuses expériences professionnelles dans des domaines variés, allant de l'informatique et la communication à l'hôtellerie et l'animation.
+                        Je suis actuellement étudiante en informatique à l'école Hexagone à Clermont-Ferrand. Tout au long de mon parcours, j'ai acquis de nombreuses expériences professionnelles dans des domaines variés, allant de l'informatique et la communication à l'hôtellerie et l'animation.
                         Je suis aujourd'hui à la recherche d'un stage, d'une alternance ou d'un job étudiant qui me permettra de mettre en pratique mes compétences, de continuer à apprendre et de contribuer activement à des projets stimulants.
                     </p>
                     <button type="button" class="btn btn-dark fs-3 mx-2"><i class="fab fa-discord"></i></button>
@@ -87,7 +95,7 @@
             </div>
         </main>
 
-    </div>
+    </header>
 
     <section class="container mt-5" id="Hardskills">
         <h1 class="display-5 text-center">Hard <samp class="fw-bold">Skills</samp></h1>
@@ -237,7 +245,7 @@
             <h1 class="display-5 text-center text-white pt-5  " >Mes <samp class="fw-bold">Projets</samp></h1>
             <article class="row d-flex align-items-center py-5 " >
                 <div class="col-12 col-lg-6 py-2 order-2 order-lg-1">
-                    <img src="image/code.jpg" alt="" class="img-fluid rounded">
+                    <img src="image/code.jpg" alt="Extrait de code HTML avec une barre de navigation et des liens" class="img-fluid rounded">
                 </div>
                 <div class="col-12 col-lg-6 py-2 text-white order-1 order-lg-2">
                     <p class="display-5">.01</p>
@@ -252,14 +260,14 @@
                     <p>Dans le cadre de notre projet, nous avons conçu et réalisé un jeu « Simon » complet, inspiré du célèbre jeu de mémoire. L’objectif était de développer une version fonctionnelle du jeu en maîtrisant l’ensemble des étapes, depuis la conception jusqu’à la mise en service.</p>
                 </div>
                 <div class="col-12 col-lg-6 py-2 ">
-                    <img src="image/Simon.png" alt="" class="img-fluid rounded">
+                    <img src="image/Simon.png" alt="Volant de jeu rose modélisé en 3D avec boutons colorés" class="img-fluid rounded">
                 </div>
 
             </article>
 
             <article class="row d-flex align-items-center py-5 order-2 order-lg-1" >
                 <div class="col-12 col-lg-6 py-2 order-2 order-lg-1">
-                    <img src="image/Cource.jpg" alt="" class="img-fluid rounded img-courses">
+                    <img src="image/Cource.jpg" alt="Fournitures scolaires pour enfants avec crayons de couleur, stylos, cahiers et matériel éducatif" class="img-fluid rounded img-courses">
                 </div>
                 <div class="col-12 col-lg-6 py-2 text-white order-1 order-lg-2">
                     <p class="display-5">.03</p>
