--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="./image/cv_logo.png">
+    <link rel="icon" type="image/png" href="image/cv_logo.png">
     <title>Lea Bougarel - Portfolio développeuse & compétences web</title>
     <meta name="description" content="Portfolio de Lea Bougarel, étudiante en informatique à Clermont-Ferrand : projets web, compétences en HTML, CSS, Bootstrap, JavaScript et plus.">
 
