--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <article class="border border-white rounded p-4 my-4 bg-dark">
                 <div class="d-flex align-items-center  gap-5">
                     <i class="fas fa-hamburger fa-2x"></i>
-                    <span>Equipaire McDonald's</span>
+                    <span>Equipe polyvalente chez McDonald's</span>
                     <span class="ms-auto">2024-2025</span>
                 </div>
                 <p class="mt-3">J'ai travaillé en tant qu'équipière polyvalente au comptoir chez McDonald's, où j'ai assuré l'accueil des clients, la prise de commandes et le service. Cette expérience m'a permis de développer un excellent sens du contact, une grande réactivité ainsi qu'une capacité à travailler efficacement en équipe, même en période de forte affluence.</p>
@@ -271,7 +271,7 @@
                 </div>
                 <div class="col-12 col-lg-6 py-2 text-white order-1 order-lg-2">
                     <p class="display-5">.03</p>
-                    <h1 class="display-6 fw-bold my-4 ">Cours pareners</h1>
+                    <h1 class="display-6 fw-bold my-4 ">Course parrainée</h1>
                     <p>Dans le cadre de notre projet de lycée, nous organisons une course parrainée destinée à mobiliser les élèves, les familles et l’ensemble de la communauté scolaire autour d’une action solidaire et sportive.
                     Le principe est simple : chaque participant court ou marche une certaine distance, et ses proches (parents, amis, voisins, entreprises locales) s’engagent à verser un montant fixe ou une somme calculée en fonction du nombre de tours réalisés.</p>
                 </div>
@@ -323,7 +323,7 @@
                 </div>
             </div>
             <div class="col-12 col-lg-6">
-                <h1 class="display-5 "><span class="fw-bold">Hésitez </span> pas a me <samp class="creu fw-bold">comtacter!</samp></h1>
+                <h1 class="display-5 "><span class="fw-bold">Hésitez </span> pas à me <samp class="creu fw-bold">contacter!</samp></h1>
                 <p>Je cherche à repousser les limites de la créativité pour créer des expériences interactives captivantes, conviviales et mémorables.</p>
                 <p class="fs-4 fw-bold">leabougarel@gmail.com</p>
                 <p class="fs-4 fw-bold">07. 67. 50. 92. 80.</p>
